# store-manager-v2

./: .env.example  .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  requirements.txt  run.py
app/: __init__.py
app/api/v2/: __init__.py  expected_json.py  models.py  productutils.py  productviews.py  restrict.py  saleviews.py  tokenrequired.py  usermodels.py  userutils.py  userviews.py  utils.py  views.py
app/api/v2/models/: dbmodels.py  productmodels.py  salemodels.py  usermodels.py
app/api/v2/utils/: productutils.py  userutils.py
app/api/v2/views/: productinput.py  productutils.py  productviews.py  restrict.py  saleviews.py  tokenrequired.py  userviews.py
app/test/v2/: base_test.py  test_products.py  test_sales.py  test_users.py
instance/: config.py
