[tool.poetry]
name = "store-manager"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "2.1.0"
flask-expects-json = "1.3.1"
Flask-RESTful = "0.3.9"
gunicorn = "19.9.0"
validate_email = "1.3"
psycopg2 = "2.7.5"
PyJWT = "1.6.4"
Jinja2 = "3.0"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
